--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -59,6 +59,9 @@
     <Compile Include="Entities\Player.cs" />
     <Compile Include="Enums\BeggarsPractice.cs" />
     <Compile Include="Enums\FoolsPractice.cs" />
+    <Compile Include="Interfaces\IPlayerRepository.cs" />
+    <Compile Include="Interfaces\IRepository.cs" />
+    <Compile Include="Interfaces\IUnitOfWork.cs" />
     <Compile Include="Migrations\202205032148322_InitialModels.cs" />
     <Compile Include="Migrations\202205032148322_InitialModels.designer.cs">
       <DependentUpon>202205032148322_InitialModels.cs</DependentUpon>
@@ -69,6 +72,9 @@
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\PlayerRepository.cs" />
+    <Compile Include="Repositories\Repository.cs" />
+    <Compile Include="UnitOfWork.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
