--- a/PL/PL.csproj
+++ b/PL/PL.csproj
@@ -188,6 +188,10 @@
     <Content Include="Scripts\jquery-3.4.1.min.map" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\BLL\BLL.csproj">
+      <Project>{ae51431c-8427-4296-ae3f-80a85fb015c9}</Project>
+      <Name>BLL</Name>
+    </ProjectReference>
     <ProjectReference Include="..\DAL\DAL.csproj">
       <Project>{269c58f0-83a7-4a4c-9cd7-c78ea67b7bc4}</Project>
       <Name>DAL</Name>
