--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -68,7 +68,7 @@
     <Compile Include="Npcs\BeggarNpc.cs" />
     <Compile Include="Npcs\FoolNpc.cs" />
     <Compile Include="Npcs\Npc.cs" />
-    <Compile Include="Player.cs" />
+    <Compile Include="PlayerLogic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\NpcsResources.Designer.cs">
       <AutoGen>True</AutoGen>
